@@ -9,17 +9,15 @@ AC_PROG_CC
 AM_PROG_LIBTOOL
 CFLAGS='-g -O0'
 AC_SUBST(CFLAGS)
-
 GNUC_PRETTY=
 GNUC_UNUSED=
-BREAKPOINT=
+BREAKPOINT="G_STMT_START { } G_STMT_END"
 if test x$GCC = xyes; then
    GNUC_UNUSED='__attribute__((__unused__))'
    GNUC_NORETURN='__attribute__((__noreturn__))'
-   case $target in
-     i[3456]86-*)
-       BREAKPOINT="G_STMT_START { __asm__ ("int $03"); } G_STMT_END"
-     ;;
+   echo targte_cpu=$target_cpu
+   case $target_cpu in
+     i*86) BREAKPOINT="G_STMT_START { __asm__ (\"int \$03\"); } G_STMT_END" ;;
    esac
 fi
 AC_SUBST(GNUC_PRETTY)
